tests/neg/java-fake-ann-separate/FakeAnn_1.java
interface FakeAnn_1 extends java.lang.annotation.Annotation { }
